manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-app-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-app-svc
          servicePort: 2345
